fixed alignment

--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ body {
 	margin:0 auto;
 	padding:0;
 	width: 978px;
-	margin-left: 65px;
+	margin-left: 250px;
 }
 .main-content 	{
 	float:left;
